[tool.poetry]
name = "langchain-api"
version = "0.0.1"
description = "langchain实现的闭源模型统一API"
authors = ["liuyu <506610466@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
